Update investigaciones, i100, PCB2038 ficha v2

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -83,13 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "warning: in the working copy of 'content/data/investigaciones/2023-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2023-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2023-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/2024-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/2024-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/2024-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
@@ -97,15 +100,25 @@
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2024.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2023.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2024.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2025-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2025-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2025-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 5c9d569] Update investigaciones, i064, Presentacion EBC Practicas Deportivas y Calidad de Vida, titulo y descripcion\n",
-      " 3 files changed, 8 insertions(+), 8 deletions(-)\n"
+      "[master 6d66f0a] Update investigaciones, i100, PCB2038 primera ficha\n",
+      " 13 files changed, 5015 insertions(+), 174 deletions(-)\n",
+      " create mode 100644 content/data/investigaciones/2025-hallazgos.json\n",
+      " create mode 100644 content/data/investigaciones/2025-investigaciones.json\n",
+      " create mode 100644 content/data/investigaciones/2025-productos.json\n",
+      " create mode 100644 content/data/investigaciones/investigaciones.xlsx\n",
+      " create mode 100644 processes/investigaciones/update_investigaciones-2025.ipynb\n"
      ]
     },
     {
@@ -113,14 +126,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   657707b..5c9d569  master -> master\n"
+      "   5c9d569..6d66f0a  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, i064, Presentacion EBC Practicas Deportivas y Calidad de Vida, titulo y descripcion\"\n",
+    "!git commit -m \"Update investigaciones, i100, PCB2038 primera ficha\"\n",
     "!git push origin master"
    ]
   }
