--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,29 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'content/data/investigaciones/2025-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/2025-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/2025-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 38e80b5] Update investigaciones, i100, PCB2038 ficha v2\n",
-      " 5 files changed, 1690 insertions(+), 1677 deletions(-)\n"
+      "[master 4b731a2] Update investigaciones, i121, Barrios Vivos, ficha V2 - miniatura\n",
+      " 1 file changed, 0 insertions(+), 0 deletions(-)\n",
+      " create mode 100644 projects/investigaciones/thumbnails/121.jpg\n"
      ]
     },
     {
@@ -116,14 +103,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   aa2e33f..38e80b5  master -> master\n"
+      "   f763e1a..4b731a2  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, i100, PCB2038 ficha v2\"\n",
+    "!git commit -m \"Update investigaciones, i121, Barrios Vivos, ficha V2 - miniatura\"\n",
     "!git push origin master"
    ]
   }
