--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -86,16 +86,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'content/data/investigaciones/2024-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2024-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2024-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2024.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 4b731a2] Update investigaciones, i121, Barrios Vivos, ficha V2 - miniatura\n",
-      " 1 file changed, 0 insertions(+), 0 deletions(-)\n",
-      " create mode 100644 projects/investigaciones/thumbnails/121.jpg\n"
+      "[master 14c4217] Update investigaciones, i081 Horarios nocturnos\n",
+      " 9 files changed, 417 insertions(+), 430 deletions(-)\n",
+      " create mode 100644 projects/investigaciones/thumbnails/81.jpg\n"
      ]
     },
     {
@@ -103,14 +117,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   f763e1a..4b731a2  master -> master\n"
+      "   4b731a2..14c4217  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, i121, Barrios Vivos, ficha V2 - miniatura\"\n",
+    "!git commit -m \"Update investigaciones, i081 Horarios nocturnos\"\n",
     "!git push origin master"
    ]
   }
