Update investigaciones, i076 Espacio publico

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -107,9 +107,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 14c4217] Update investigaciones, i081 Horarios nocturnos\n",
-      " 9 files changed, 417 insertions(+), 430 deletions(-)\n",
-      " create mode 100644 projects/investigaciones/thumbnails/81.jpg\n"
+      "[master 68790ea] Update investigaciones, i076 Espacio publico\n",
+      " 7 files changed, 28 insertions(+), 14 deletions(-)\n",
+      " create mode 100644 projects/investigaciones/thumbnails/76.jpg\n"
      ]
     },
     {
@@ -117,14 +117,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   4b731a2..14c4217  master -> master\n"
+      "   14c4217..68790ea  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, i081 Horarios nocturnos\"\n",
+    "!git commit -m \"Update investigaciones, i076 Espacio publico\"\n",
     "!git push origin master"
    ]
   }
