Update investigaciones, 133 seguridad y justica

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -86,29 +86,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'content/data/investigaciones/2025-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2025-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2025-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2024.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch master\n",
-      "nothing to commit, working tree clean\n"
+      "[master fbee7fa] Update investigaciones, enero 2025\n",
+      " 8 files changed, 1261 insertions(+), 831 deletions(-)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Everything up-to-date\n"
+      "To https://github.com/observatoriocultura/contenidos.git\n",
+      "   a6d1642..fbee7fa  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, i089 Movilidad\"\n",
+    "!git commit -m \"Update investigaciones, 133 seguridad y justica\"\n",
     "!git push origin master"
    ]
   }
