Update investigaciones, lineas investigacion 2023

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -100,15 +100,22 @@
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2024.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master fbee7fa] Update investigaciones, enero 2025\n",
-      " 8 files changed, 1261 insertions(+), 831 deletions(-)\n"
+      "[master 99afe9c] Update investigaciones, 133 seguridad y justica\n",
+      " 16 files changed, 158 insertions(+), 63 deletions(-)\n",
+      " create mode 100644 projects/investigaciones/thumbnails/101.jpg\n",
+      " create mode 100644 projects/investigaciones/thumbnails/102.jpg\n",
+      " create mode 100644 projects/investigaciones/thumbnails/103.jpg\n",
+      " create mode 100644 projects/investigaciones/thumbnails/117.jpg\n",
+      " create mode 100644 projects/investigaciones/thumbnails/123.jpg\n",
+      " create mode 100644 projects/investigaciones/thumbnails/133.jpg\n",
+      " create mode 100644 projects/investigaciones/thumbnails/99.jpg\n"
      ]
     },
     {
@@ -116,7 +123,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   a6d1642..fbee7fa  master -> master\n"
+      "   fbee7fa..99afe9c  master -> master\n"
      ]
     }
    ],
