Update investigaciones, sabor bogota

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -86,36 +86,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'content/data/investigaciones/2025-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/2025-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/2025-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2023-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2023-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2023-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2023.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'resources/js/pcrn.js', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 99afe9c] Update investigaciones, 133 seguridad y justica\n",
-      " 16 files changed, 158 insertions(+), 63 deletions(-)\n",
-      " create mode 100644 projects/investigaciones/thumbnails/101.jpg\n",
-      " create mode 100644 projects/investigaciones/thumbnails/102.jpg\n",
-      " create mode 100644 projects/investigaciones/thumbnails/103.jpg\n",
-      " create mode 100644 projects/investigaciones/thumbnails/117.jpg\n",
-      " create mode 100644 projects/investigaciones/thumbnails/123.jpg\n",
-      " create mode 100644 projects/investigaciones/thumbnails/133.jpg\n",
-      " create mode 100644 projects/investigaciones/thumbnails/99.jpg\n"
+      "[master 49e3c95] Update investigaciones, lineas investigacion 2023\n",
+      " 13 files changed, 1358 insertions(+), 1198 deletions(-)\n",
+      " create mode 100644 projects/investigaciones/thumbnails/137.jpg\n",
+      " create mode 100644 resources/js/pcrn.js\n"
      ]
     },
     {
@@ -123,14 +119,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   fbee7fa..99afe9c  master -> master\n"
+      "   99afe9c..49e3c95  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, 133 seguridad y justica\"\n",
+    "!git commit -m \"Update investigaciones, sabor bogota\"\n",
     "!git push origin master"
    ]
   }
