Update investigaciones, pendientes Cultura Ciudadana

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -86,32 +86,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'content/data/investigaciones/2023-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/2023-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/2023-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2025-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2025-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2025-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2023.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'resources/js/pcrn.js', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 49e3c95] Update investigaciones, lineas investigacion 2023\n",
-      " 13 files changed, 1358 insertions(+), 1198 deletions(-)\n",
-      " create mode 100644 projects/investigaciones/thumbnails/137.jpg\n",
-      " create mode 100644 resources/js/pcrn.js\n"
+      "[master acf258a] Update investigaciones, sabor bogota\n",
+      " 8 files changed, 412 insertions(+), 416 deletions(-)\n",
+      " create mode 100644 projects/investigaciones/thumbnails/122.jpg\n"
      ]
     },
     {
@@ -119,7 +117,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   99afe9c..49e3c95  master -> master\n"
+      "   49e3c95..acf258a  master -> master\n"
      ]
     }
    ],
