Update investigaciones, pendientes Sector Cultura

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -99,17 +99,17 @@
       "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master acf258a] Update investigaciones, sabor bogota\n",
-      " 8 files changed, 412 insertions(+), 416 deletions(-)\n",
-      " create mode 100644 projects/investigaciones/thumbnails/122.jpg\n"
+      "[master 50c4331] Update investigaciones, pendientes Cultura Ciudadana\n",
+      " 8 files changed, 421 insertions(+), 1165 deletions(-)\n",
+      " create mode 100644 projects/investigaciones/thumbnails/105.jpg\n",
+      " create mode 100644 projects/investigaciones/thumbnails/106.jpg\n"
      ]
     },
     {
@@ -117,14 +117,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   49e3c95..acf258a  master -> master\n"
+      "   acf258a..50c4331  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, sabor bogota\"\n",
+    "!git commit -m \"Update investigaciones, pendientes Cultura Ciudadana\"\n",
     "!git push origin master"
    ]
   }
