Update investigaciones, pendientes Sector Cultura, LauLozV2

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -99,16 +99,15 @@
       "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 6ef2175] Update investigaciones, pendientes Sector Cultura\n",
-      " 9 files changed, 307 insertions(+), 99 deletions(-)\n"
+      "[master b063628] Update investigaciones, pendientes Sector Cultura, LauLoz\n",
+      " 8 files changed, 608 insertions(+), 97 deletions(-)\n"
      ]
     },
     {
@@ -116,14 +115,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   50c4331..6ef2175  master -> master\n"
+      "   6ef2175..b063628  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, pendientes Sector Cultura\"\n",
+    "!git commit -m \"Update investigaciones, pendientes Sector Cultura, LauLoz\"\n",
     "!git push origin master"
    ]
   }
