Actualizacion tableros dataviz feb 2026

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -99,15 +99,16 @@
       "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master b063628] Update investigaciones, pendientes Sector Cultura, LauLoz\n",
-      " 8 files changed, 608 insertions(+), 97 deletions(-)\n"
+      "[master d3ac319] Update investigaciones, pendientes Sector Cultura, LauLozV2\n",
+      " 9 files changed, 187 insertions(+), 124 deletions(-)\n"
      ]
     },
     {
@@ -115,14 +116,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   6ef2175..b063628  master -> master\n"
+      "   b063628..d3ac319  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, pendientes Sector Cultura, LauLoz\"\n",
+    "!git commit -m \"Update investigaciones, pendientes Sector Cultura, LauLozV2\"\n",
     "!git push origin master"
    ]
   }
